<resources>
    <string name="app_name">Netflix</string>
    <string name="et_password_hint">Contraseña</string>
    <string name="tv_ingrese_usuario">Ingrese su Usuario</string>
    <string name="btn_login_text">Iniciar Sesión</string>
    <string name="btn_sign_up_text">Crear Usuario</string>
    <string name="tv_login_text">Ingresar Usuario</string>
    <string name="et_email_hint">Email</string>
    <string name="tv_title_login_fields">Iniciar Sesión</string>
    <string name="tv_title_sign_up_fields">Crear Usuario</string>
    <string name="et_nombre_hint">Nombre</string>
    <string name="et_apellido_hint">Apellido</string>
    <string name="et_username_hint">Nombre de Usuario</string>
    <string name="et_confirm_pass_hint">Confirmar Contraseña</string>
    <string name="et_birthdate_hint">Fecha de Nacimiento</string>
    <string name="iv_description_sign_up">Imagen de Fondo, usada tambien en LoginActivity</string>
    <string name="iv_logo_description">Logo de Netflix como PNG</string>
    <string name="iv_fondo_login_description">Imagen para Fondo de Login Activity</string>
</resources>